rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_annotation.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class .annotation
    .name "Lcom/example/Annotation;"
    .value "value" = "test"
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_annotation.ja:2:5 ]
   │
 2 │     .name "Lcom/example/Annotation;"
   │     ──┬──  
   │       ╰──── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
